# Orca-config-creator

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-artifacts.yml  build-tauri.yml
docs/: config-locations.md  config-types.md  create-new-config.md  edit-config-window.md  how-to-build.md
src/: App.css  App.tsx  Home.tsx  edit-config.tsx
src-tauri/: Cargo.toml  newFile  tauri.conf.json
src-tauri/src/: commons.rs  configuration_loader.rs  main.rs
src/components/: background-plate.tsx  tab-template.tsx  tabbed-window.tsx
src/components/tab-panels/: analysis-tab.tsx  config-tab-template.tsx  field-button.tsx  filament-config-tab.tsx  file-loader.tsx  input-component.tsx  model-config-tab.tsx  printer-config-tab.tsx  process-config-tab.tsx  vendor-config-tab.tsx
src/components/tooltip/: infotip.tsx
src/lib/: all-configuration-options.ts  commons.ts  config-option-types.ts  configuration-loader.ts  constants.ts  edit-config-helpers.ts  model-configuration-options.ts  printer-configuration-options.ts  state-store.ts  vendor-configuration-options.ts
src/lib/bindings/: AnalysisMessageDetails.ts  ConfigAnalysisMessage.ts  ConfigDetails.ts  ConfigErrorMessage.ts  ConfigNameAndPath.ts  ConfigWarningMessage.ts  ErrType.ts  ErrWan.ts  FilamentJsonSchema.ts  GenericJsonSchema.ts  MinFilamentJsonSchema.ts  MinPrinterModelJsonSchema.ts  MinPrinterVariantJsonSchema.ts  MinProcessJsonSchema.ts  PrinterModelJsonSchema.ts  PrinterVariantJsonSchema.ts  ProcessJsonSchema.ts  VendorJsonSchema.ts
(+12 files in other folders)
