[package]
name = "orca-config-manager"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-write-file", "window-set-focus", "window-create", "dialog-all", "macos-private-api", "path-all", "os-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10.1.0"
zip = "2.6.1"
fs_extra = "1.3.0"
regex = "1"



[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
